tests/rosetta/out/Smalltalk/crc-32-1.out
/tmp/crc-32-1.st:8: parse error, expected ']'
