tests/rosetta/out/Smalltalk/crc-32-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| xor res bit x y abit bbit rshift v i ord upper lower idx toHex digits out d crc32Table table word j crc32 crc c main s result hex |
xor := [:a :b | res := 0.
bit := 1.
x := a.
y := b.
[(((x > 0)) or: [((y > 0))])] whileTrue: [.
abit := (x % 2).
bbit := (y % 2).
((abit ~= bbit)) ifTrue: [
res := (res + bit).
] .
x := (x / 2).
y := (y / 2).
bit := (bit * 2).
].
.
res. ].
rshift := [:x :n | v := x.
i := 0.
[(i < n)] whileTrue: [.
v := (v / 2).
i := (i + 1).
].
.
v. ].
ord := [:ch | upper := 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'.
lower := 'abcdefghijklmnopqrstuvwxyz'.
idx := indexOf value: upper value: ch.
((idx >= 0)) ifTrue: [
(65 + idx).
] .
idx := indexOf value: lower value: ch.
((idx >= 0)) ifTrue: [
(97 + idx).
] .
((ch = (' '))) ifTrue: [
32.
] .
0. ].
toHex := [:n | digits := '0123456789ABCDEF'.
((n = 0)) ifTrue: [
'0'.
] .
v := n.
out := ''.
[(v > 0)] whileTrue: [.
d := (v % 16).
out := ((digits copyFrom: (d + 1) to: (d + 1)) + out).
v := (v / 16).
].
.
out. ].
crc32Table := [ table := {}.
i := 0.
[(i < 256)] whileTrue: [.
word := i.
j := 0.
[(j < 8)] whileTrue: [.
((((word % 2)) = 1)) ifTrue: [
word := xor value: rshift value: word value: 1 value: 3988292384.
] ifFalse: [
word := rshift value: word value: 1.
].
j := (j + 1).
].
.
table := table copyWith: word.
i := (i + 1).
].
.
table. ].
table := crc32Table value.
crc32 := [:s | crc := 4294967295.
i := 0.
[(i < ((s size)))] whileTrue: [.
c := ord value: s copyFrom: (i + 1) to: (i + 1).
idx := xor value: (crc % 256) value: c.
crc := xor value: table at: idx value: rshift value: crc value: 8.
i := (i + 1).
].
.
(4294967295 - crc). ].
main := [ s := 'The quick brown fox jumps over the lazy dog'.
result := crc32 value: s.
hex := toHex value: result.
Transcript show: (hex) printString; cr. ].
main value.
